<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:name="Pages"
        android:title="@string/pages">
        <menu>
            <item
                android:id="@+id/one"
                android:name="Profile"
                android:iconTint="@color/colorWhite"
                android:icon="@drawable/placeholder_icon"
                android:title="@string/profile" />
            <item
                android:name="History"
                android:title="@string/history"
                android:iconTint="@color/colorBlack"
                android:icon="@drawable/icons_planner"/>
            <item
                android:name="Graph"
                android:title="@string/graph"
                android:iconTint="@color/colorBlack"
                android:icon="@drawable/icons_circle_bubbles"/>
        </menu>
    </item>
    <item android:name="Settings"
        android:title="@string/setting">
        <menu>
            <item
                android:id="@+id/rateUs"
                android:name="Rate Us"
                android:iconTint="@color/colorBlack"
                android:title="@string/rate_us"
                android:icon="@drawable/ic_star_black_24dp"/>
            <item
                android:id="@+id/drawer_report"
                android:name="Report"
                android:title="@string/report"
                android:iconTint="@color/colorBlack"
                android:icon="@drawable/ic_email_black_24dp"/>
            <item
                android:name="Ask Question"
                android:title="@string/question"
                android:icon="@drawable/icons_planner"/>
        </menu>
    </item>
    <item
        android:name="Version(1.0)"
        android:title="Version(1.0)"
        app:showAsAction="always"
        />
</menu>
