<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/gradient_bg"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"

        android:gravity="center"
        tools:context=".Users.LoginActivity">
        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/icon_one"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="15dp"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="50dp"
            android:paddingBottom="20dp"
            app:strokeWidth=".1dp"
            app:cardElevation="5dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/colorCard"
            app:strokeColor="@color/colorAccent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.progressindicator.ProgressIndicator
                    android:layout_width="match_parent"
                    android:minHeight="5dp"
                    android:visibility="invisible"
                    app:indicatorColor="@color/colorAccent"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sign Up using "
                        android:gravity="center"
                        android:textColor="@color/colorBlack"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <com.google.android.gms.common.SignInButton
                            android:id="@+id/btnLink"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:padding="0dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:layout_marginEnd="10dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:baselineAligned="false">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/fname"
                            android:textStyle="bold"
                            android:layout_marginBottom="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginTop="18dp"
                            android:textColorHint="@color/colorBlack"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:textSize="17sp">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/txtFirstName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="12dp"
                                android:inputType="textPersonName"
                                android:textColorHint="@color/colorPrimaryDark"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/lname"
                            android:textStyle="bold"
                            android:textColorHint="@color/colorBlack"
                            android:layout_marginBottom="8dp"
                            android:layout_marginStart="8dp"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_marginTop="18dp"
                            android:textSize="17sp">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/txtLastName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="12dp"
                                android:inputType="textPersonName"
                                android:textColorHint="@color/colorPrimaryDark"/>
                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:textColorHint="@color/colorBlack"
                        android:textStyle="bold"
                        android:layout_marginBottom="8dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_marginTop="5dp"
                        android:textSize="17sp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="12dp"
                            android:inputType="textEmailAddress"
                            android:textColorHint="@color/colorPrimaryDark"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone"
                        android:textColorHint="@color/colorBlack"
                        android:textStyle="bold"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_marginBottom="8dp"
                        android:textSize="17sp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="12dp"
                            android:inputType="phone"
                            android:textColorHint="@color/colorPrimaryDark"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:textStyle="bold"
                        android:textColorHint="@color/colorBlack"
                        android:layout_marginBottom="8dp"
                        android:textSize="17sp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="12dp"
                            android:inputType="textEmailAddress"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:textStyle="bold"
                        android:textColorHint="@color/colorBlack"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_marginBottom="8dp"
                        android:textSize="17sp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtPassConfirm"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="12dp"
                            android:inputType="textEmailAddress"
                            android:textColorHint="@color/colorPrimaryDark"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnReg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/gradient_bg"
                        app:cornerRadius="8dp"
                        android:text="@string/register"
                        android:hapticFeedbackEnabled="true"
                        android:textColor="@color/colorBlack"
                        android:layout_marginTop="30dp"/>

                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>

